parts of step view rdy

--- a/CookItUniversal/CookItUniversal/CookItUniversal.WindowsPhone/Pages/SavedRecipeDetailsPage.xaml
+++ b/CookItUniversal/CookItUniversal/CookItUniversal.WindowsPhone/Pages/SavedRecipeDetailsPage.xaml
@@ -42,7 +42,8 @@
                           Icon="Back"
                           Click="OnClickBack"/>
             <AppBarButton Label="Proceed to guide" 
-                          Icon="Play"/>
+                          Icon="Play"
+                          Click="OnProceedClick"/>
         </StackPanel>
     </Grid>
 </Page>
