step navigation added

--- a/CookItUniversal/CookItUniversal/CookItUniversal.Shared/App.xaml
+++ b/CookItUniversal/CookItUniversal/CookItUniversal.Shared/App.xaml
@@ -58,6 +58,6 @@
                            Style="{StaticResource DetailsTextBlock}"/>
             </StackPanel>
         </DataTemplate>
-        <converter:BytesToImageConverter x:Key="byteConverter" />
+        <converter:StepTitleConverter x:Key="StepTitleConverter"/>
     </Application.Resources>
 </Application>
